<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <TextView
        android:text="@string/step1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:textStyle="bold"
        android:padding="10dp"/>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical">
		    <TextView
		        android:text="@string/full_name"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:textStyle="bold"/>
		    
		    <EditText 
		        android:id="@+id/regLastNameText"
		        android:hint="@string/lastname"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"/>
		    
		    <EditText 
		        android:id="@+id/regFirstNameText"
		        android:hint="@string/firstname"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"/>
		    
		    <TextView
		        android:text="@string/gender"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:textStyle="bold"/>
		    
		    <RadioGroup
		        android:id="@+id/radioSex"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:orientation="horizontal"
		        android:padding="10dp">
 
		        <RadioButton
		            android:id="@+id/radioMale"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/male" 
		            android:checked="true" />
	 
		        <RadioButton
		            android:id="@+id/radioFemale"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/female" />
	 
    		</RadioGroup>
    		
		    <TextView 
		        android:text="@string/bloodType"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:textStyle="bold"/>
		    
		    <Spinner 
		        android:id="@+id/regBloodTypeSpinner"
		        android:spinnerMode="dropdown"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"/>
		    
		    <TextView
		        android:text="@string/email"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:textStyle="bold"/>
		    
		    <EditText 
		        android:id="@+id/regEmailText"
		        android:hint="@string/limit_username"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textEmailAddress"
		        android:padding="10dp"/>
		    
		    <TextView
		        android:text="@string/pass"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:textStyle="bold"/>
		    
		    <EditText 
		        android:id="@+id/regPasswordText"
		        android:hint="@string/limit_password"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword"
		        android:padding="10dp"/>
		    
		    <TextView
		        android:text="@string/retype_pass"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="10dp"
		        android:textStyle="bold"/>
		    
		    <EditText 
		        android:id="@+id/regRetypePasswordText"
		        android:hint="@string/pass"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword"
		        android:padding="10dp"/>
		    
		    <Button 
		        android:id="@+id/regNextButton"
		        android:text="@string/next"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_marginTop="10dp"
		        android:layout_marginBottom="10dp"/>
	    </LinearLayout>
    </ScrollView>
</LinearLayout>