<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <CheckBox
        android:id="@+id/level1Check"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/level_1" />

    <CheckBox
        android:id="@+id/level2Check"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/level_2" />

    <CheckBox
        android:id="@+id/level3Check"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/level_3" />
    
</LinearLayout>