<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/editDoctorButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/editDoctorPageButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/edit_doctor" />

        <Button
            android:id="@+id/editDoctorCancelButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/cancel" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/editDoctorButtons"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital" />

            <EditText
                android:id="@+id/editDoctorHospitalText"
                android:singleLine="false"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultation" />

            <EditText
                android:id="@+id/editDoctorConsultationText"
                android:singleLine="false"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_num1" />

            <EditText
                android:id="@+id/editDoctorContact1Text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_num2" />

            <EditText
                android:id="@+id/editDoctorContact2Text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
