<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="150dip"
                android:layout_height="150dip" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profileBirthdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profileAge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profileBloodtype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profileGender"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/progress" />
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/informationButton"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:text="@string/information" />

                <Button
                    android:id="@+id/albumButton"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:text="@string/album" />
                
            </LinearLayout>

            <Button
                android:id="@+id/lifeEventsButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/life_events" />

            <Button
                android:id="@+id/healthGrowthButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/health_growth" />

            <Button
                android:id="@+id/timelineButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/timeline" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>