<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:fillViewport="true"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/login_background"
	    tools:context=".MainActivity">
		
		    <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:layout_marginTop="50dip"
		        android:layout_marginBottom="50dip"
		        android:text="@string/app_name"
		        android:textSize="32sp"
		        android:textColor="@color/white"
		        android:textStyle="bold"
		        android:fontFamily="sans-serif-light"/>
		    
		    <EditText 
		        android:id="@+id/loginEmailText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dip"
		        android:padding="10dp"
		        android:inputType="textEmailAddress"
		        android:hint="@string/email"
		        android:background="@drawable/edittext_selector"
		        android:fontFamily="sans-serif-light"/>
		    
		    <EditText 
		        android:id="@+id/loginPasswordText"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/pass"
		        android:layout_margin="10dp"
		        android:padding="10dp"
		        android:inputType="textPassword"
		        android:background="@drawable/edittext_selector"
		        android:fontFamily="sans-serif-light"/>
		    
		    <Button 
		        android:id="@+id/mainLoginButton"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/login"
		        android:layout_margin="10dp"
		        android:background="@color/maroon"
		        android:textColor="@color/white"
		        android:textStyle="bold"
		        android:fontFamily="sans-serif-light"/>
		    
		    <TextView 
		        android:id="@+id/register_link"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:layout_marginTop="50dip"
		        android:layout_marginBottom="15dip"
		        android:text="@string/register"
		        android:textSize="12sp"
		        android:textColor="@color/register_selector"
		        android:fontFamily="sans-serif-light"/>
	    
	</LinearLayout>
</ScrollView>
